# fastapi-template

./: .dockerignore  .env.example  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  .python-version  404.html  BUGS.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  SECURITY-REVIEW.md  SECURITY.md  TODO.md  alembic.ini  alembic_scripting.ini  api-admin  capture_test.py  config.py  db.py  docker-compose.yml  index.html  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml  template-admin
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: CI.yml  codacy-coverage.yml  codeql.yml  dependency-review.yml  mypy.yml  prek.yml  renovate-uv-export.yml  ruff.yml  tests.yml
app/: __init__.py  api_admin.py  logs.py  main.py
app/admin/: __init__.py  admin.py  auth.py  models.py
app/cache/: __init__.py  constants.py  decorators.py  invalidation.py  key_builders.py
app/commands/: __init__.py  custom.py  db.py  dev.py  docs.py  keys.py  test.py  user.py
app/config/: __init__.py  helpers.py  log_config.py  metadata.py  openapi.py  settings.py
app/database/: __init__.py  db.py  helpers.py
app/managers/: __init__.py  api_key.py  auth.py  email.py  helpers.py  security.py  user.py
app/metrics/: __init__.py  custom.py  instrumentator.py  namespace.py
app/middleware/: __init__.py  cache_logging.py  logging_middleware.py
app/migrations/: env.py
app/models/: __init__.py  api_key.py  enums.py  user.py
app/rate_limit/: __init__.py  config.py  decorators.py  handlers.py
app/resources/: __init__.py  admin.py  api_key.py  auth.py  config_error.py  heartbeat.py  home.py  routes.py  user.py
app/schemas/: __init__.py  base.py  email.py  examples.py  password.py
app/templates/: index.html  password_reset_form.html  password_reset_success.html
changelog/: index.html
commands/: custom.py  db.py  dev.py  docs.py  user.py
config/: helpers.py  metadata.py  settings.py  structure.py
contributing/: index.html
customization/meta/: index.html
customization/templates/: index.html
database/: db.py
deployment/deployment/: index.html
development/docker/: index.html
development/documentation/: index.html
development/local/: index.html
docker_support/: create-test-db.sh
docs/: changelog.md  contributing.md  future.md  how-to-guides.md  important.md  index.md  known-issues.md  license.md  project-organization.md  quick-start.md  troubleshooting.md  tutorials.md
docs/css/: extra.css
docs/customization/: meta.md  templates.md
docs/deployment/: deployment.md
docs/development/: docker.md  documentation.md  local.md
docs/hooks/: __init__.py  google_style_notes.py
docs/reference/: api.md  swagger.md
docs/usage/: add-user.md  admin-panel.md  api-keys.md  caching.md  configuration.md  dev-server.md  development.md  installation.md  metrics.md  rate-limiting.md  user-control.md  user-management.md
explanation/: index.html
future/: index.html
how-to-guides/: index.html
important/: index.html
known-issues/: index.html
license/: index.html
managers/: auth.py  email.py  user.py
migrations/: env.py
migrations/versions/: 2022_10_12_1844-1850712f171b_initial.py  2022_10_14_1844-3ef701c22cf8_add_banned_field_to_databas.py  2022_12_08_1530-4cab6fd22890_add_verified_flag.py  2023_04_30_1602-b94f4d3695bb_add_token_blacklist_table.py
models/: enums.py  user.py
old_tests/: conftest.py  helpers.py
old_tests/integration/: test_auth_routes.py  test_doc_routes.py  test_home_routes.py  test_protected_user_routes.py  test_user_routes.py
old_tests/unit/: test_auth_manager.py  test_auth_manager_bearer_class.py  test_auth_manager_helpers.py  test_user_manager.py
project-organization/: index.html
prometheus-test/: docker-compose.yml  prometheus.yml
quick-start/: index.html
redis/: docker-compose.yml
reference/: openapi.json
reference/api/: index.html
reference/swagger/: index.html  swagger-0530562f.html  swagger-06765af5.html  swagger-0d94e125.html  swagger-0e52b355.html  swagger-1c154421.html  swagger-1c597f70.html  swagger-209ff6a1.html  swagger-2259c483.html  swagger-2512f707.html  swagger-39076b34.html  swagger-3f0fa546.html  swagger-3fa7b173.html  swagger-400c2715.html  swagger-539aa945.html  swagger-551d3c86.html  swagger-56686ab5.html  swagger-57dce8a6.html  swagger-589d0820.html  swagger-67d5d0ce.html  swagger-6a6cc9f3.html  swagger-6b29d2b5.html  swagger-6b2fc172.html  swagger-729eed2b.html  swagger-79867d6e.html  swagger-7d7cb674.html  swagger-7fb72018.html  swagger-81d05ad2.html  swagger-8bd5eed4.html  swagger-8cc37574.html  swagger-8d7816bb.html  swagger-943313f4.html  swagger-95719379.html  swagger-9b0a630c.html  swagger-9c04cafe.html  swagger-9d4ab197.html  swagger-9d7cc741.html  swagger-9df32d74.html  swagger-a3ee9757.html  swagger-aaeef74d.html  (+18 more)
resources/: auth.py  config_error.py  home.py  routes.py  user.py
schemas/: base.py  email.py  examples.py
schemas/request/: auth.py  user.py
schemas/response/: auth.py  user.py
search/: search_index.json
static/: site.css
templates/: index.html
templates/email/: welcome.html
tests/: __init__.py  _constants.py  conftest.py  helpers.py
tests/cli/: __init__.py  test_cli_create_user.py  test_cli_custom_command.py  test_cli_db_command.py  test_cli_db_seed.py  test_cli_docs_command.py  test_cli_keys_command.py  test_cli_main.py  test_cli_test_command.py  test_cli_user_command.py  test_gatekeeper.py
tests/integration/: __init__.py  test_admin_routes.py  test_api_key_routes.py  test_auth_routes.py  test_cache.py  test_doc_routes.py  test_home_routes.py  test_metrics_endpoint.py  test_password_recovery.py  test_protected_user_routes.py  test_rate_limit_metrics.py  test_rate_limit_redis.py  test_rate_limiting.py  test_startup.py  test_user_routes.py
tests/unit/: __init__.py  test_admin.py  test_api_key_auth.py  test_cache.py  (+27 more)
troubleshooting/: index.html
tutorials/: index.html
(+40 files in other folders)
